变量命名优化